# libmpu9250

./: CMakeLists.txt  README.md  version.py
lib/: mpu9250.cmake
lib/include/: mpu9250.h  mpu9250.hpp  mpu9250_defs.h  mpu9250_if.hpp  mpu9250_regs.h  registers.h
lib/mpu9250/: mpu9250.h  mpu9250.hpp  mpu9250_if.hpp  mpu9250_regs.h
lib/source/: mpu9250.c
test/include/: mock_spi.hpp
test/source/: dynamixeltest.cpp  mpu9250test.cpp
util/source/: main.cpp
